# intel-ipsec-mb

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING  Dockerfile.template  INSTALL.md  LICENSE  Makefile  Mayhemfile  README  README.md  ReleaseNotes.md  ReleaseNotes.txt  SECURITY.md  aes128_ecbenc_x3.asm  aes_cmac_subkey_gen.asm  aes_ecbenc.asm  aes_keyexp_128.asm  aes_keyexp_192.asm  aes_keyexp_256.asm  aes_xcbc_expand_key.c  alloc.c  asm.h  asm_types.h  aux_funcs.h  const.asm  constants.asm  constants.h  cpu_feature.c  des.h  des_basic.c  des_key.c  gcm.c  gcm_defines.asm  gcm_defines.h  imb_job.asm  intel-ipsec-mb.h  intel-ipsec-mb.spec  ipsec_mb_job.c  job_aes_hmac.asm  (+16 more)
examples/burst-app/: CMakeLists.txt  Makefile  README.md  main.c  win_x64.mak
lib/: CMakeLists.txt  Makefile  aes128_ecbenc_x3.asm  aes_cmac_subkey_gen.asm  aes_keyexp_128.asm  aes_keyexp_192.asm  aes_keyexp_256.asm  aes_xcbc_expand_key.c  alloc.c  api_doxygen.conf  chacha20.c  chacha20_poly1305.c  const.asm  cpu_feature.c  crc32_const.asm  crc32_refl_const.asm  des_basic.c  error.c  imb_job.asm  intel-ipsec-mb.h  libIPSec_MB.def  libipsec-mb.7  mb_mgr_auto.c  mb_mgr_datastruct.asm  poly1305.asm  sha_one_block.c  snow3g_tables.c  win_x64.mak
lib/aarch64/: alloc_aarch64.c  clear_mem_aarch64.c  clear_regs_mem_aarch64.h  constant_lookup_aarch64.h  cpu_features_aarch64.c  lookup_16x8bit_neon.S  mb_mgr_aarch64.c  mb_mgr_aarch64_no_aesni.c  mb_mgr_auto_aarch64.c  mb_mgr_code_aarch64.h  snow3g_aarch64.c  snow3g_aarch64_no_aesni.c  snow3g_common_aarch64.h
lib/avx/: aes128_cbc_dec_by8_avx.asm  aes128_cbc_enc_x8_avx.asm  aes128_cbc_mac_x8.asm  aes128_cbc_mac_x8_avx.asm  aes128_cbcs_1_9_dec_by8_avx.asm  aes128_cbcs_1_9_enc_x8_avx.asm  aes128_cntr_by8_avx.asm  aes128_cntr_ccm_by8_avx.asm  aes128_ecb_by4_avx.asm  aes128_ecb_by8_avx.asm  aes128_gcm_by8_avx.asm  aes128_xcbc_mac_x8_avx.asm  aes192_cbc_dec_by8_avx.asm  aes192_cntr_by8_avx.asm  aes192_ecb_by4_avx.asm  aes192_ecb_by8_avx.asm  aes192_gcm_by8_avx.asm  aes256_cbc_dec_by8_avx.asm  aes256_cbc_mac_x8.asm  aes256_cbc_mac_x8_avx.asm  aes256_cntr_by8_avx.asm  aes256_cntr_ccm_by8_avx.asm  aes256_ecb_by4_avx.asm  aes256_ecb_by8_avx.asm  aes256_gcm_by8_avx.asm  aes_cbc_enc_128_x8.asm  aes_cbc_enc_192_x8.asm  aes_cbc_enc_256_x8.asm  aes_cbcs_1_9_enc_128_x8.asm  aes_cfb_avx.asm  aes_ecb_by4_avx.asm  aes_xcbc_mac_128_x8.asm  chacha20_avx.asm  crc16_x25_avx.asm  crc32_by8_avx.asm  crc32_fp_avx.asm  crc32_iuup_avx.asm  crc32_lte_avx.asm  crc32_refl_by8_avx.asm  crc32_sctp_avx.asm  (+74 more)
lib/avx10_t1/: README  mb_mgr_avx10.c  mb_mgr_avx10_t1.c
lib/avx2/: aes128_ecb_vaes_avx2.asm  aes128_gcm_by8_avx2.asm  aes192_ecb_vaes_avx2.asm  aes192_gcm_by8_avx2.asm  aes256_ecb_vaes_avx2.asm  aes256_gcm_by8_avx2.asm  chacha20_avx2.asm  gcm128_avx_gen4.asm  gcm192_avx_gen4.asm  gcm256_avx_gen4.asm  gcm_avx_gen4.asm  mb_mgr_avx2.c  mb_mgr_hmac_flush_avx2.asm  mb_mgr_hmac_md5_flush_avx2.asm  mb_mgr_hmac_md5_submit_avx2.asm  mb_mgr_hmac_sha224_flush_avx2.asm  mb_mgr_hmac_sha224_submit_avx2.asm  mb_mgr_hmac_sha384_flush_avx2.asm  mb_mgr_hmac_sha384_submit_avx2.asm  mb_mgr_hmac_sha512_flush_avx2.asm  mb_mgr_hmac_sha512_submit_avx2.asm  mb_mgr_hmac_sha_224_flush_avx2.asm  mb_mgr_hmac_sha_224_submit_avx2.asm  mb_mgr_hmac_sha_256_flush_avx2.asm  mb_mgr_hmac_sha_256_submit_avx2.asm  mb_mgr_hmac_sha_384_flush_avx2.asm  mb_mgr_hmac_sha_384_submit_avx2.asm  mb_mgr_hmac_sha_512_flush_avx2.asm  mb_mgr_hmac_sha_512_submit_avx2.asm  mb_mgr_hmac_submit_avx2.asm  mb_mgr_zuc_submit_flush_avx2.asm  md5_x8x2_avx2.asm  sha1_x8_avx2.asm  sha256_oct_avx2.asm  sha512_x4_avx2.asm  sha_mb_avx2.c  snow3g_avx2.c  zuc_avx2.asm  zuc_avx2_top.c  zuc_top_avx2.c  (+1 more)
lib/avx2_t1/: README  aes128_cbc_dec_by8_avx.asm  aes128_cbc_enc_x8_avx.asm  aes128_cbc_mac_x8_avx.asm  aes128_cbcs_1_9_dec_by8_avx.asm  aes128_cbcs_1_9_enc_x8_avx.asm  aes128_cntr_by8_avx.asm  aes128_cntr_ccm_by8_avx.asm  aes128_ecb_by8_avx.asm  aes128_gcm_by8_avx2.asm  aes128_xcbc_mac_x8_avx.asm  aes192_cbc_dec_by8_avx.asm  aes192_cbc_enc_x8_avx.asm  aes192_cntr_by8_avx.asm  aes192_ecb_by8_avx.asm  aes192_gcm_by8_avx2.asm  aes256_cbc_dec_by8_avx.asm  aes256_cbc_enc_x8_avx.asm  aes256_cbc_mac_x8_avx.asm  aes256_cntr_by8_avx.asm  aes256_cntr_ccm_by8_avx.asm  aes256_ecb_by8_avx.asm  aes256_gcm_by8_avx2.asm  aes_cfb_avx.asm  aes_ecb_quic_x8_avx.asm  aes_gcm_by8_avx2.asm  aes_gcm_int_api_avx2.asm  chacha20_avx2.asm  copy_digest_avx.asm  crc16_x25_avx.asm  crc32_by8_avx.asm  crc32_fp_avx.asm  crc32_iuup_avx.asm  crc32_lte_avx.asm  crc32_refl_by8_avx.asm  crc32_sctp_avx.asm  crc32_wimax_avx.asm  ethernet_fcs_avx.asm  gcm_avx_gen4.asm  ghash_by8_avx2.asm  (+44 more)
lib/avx2_t2/: README  aes128_cntr_vaes_avx2.asm  aes128_ecb_vaes_avx2.asm  aes128_gcm_vaes_avx2.asm  aes192_cntr_vaes_avx2.asm  aes192_ecb_vaes_avx2.asm  aes192_gcm_vaes_avx2.asm  aes256_cntr_vaes_avx2.asm  aes256_ecb_vaes_avx2.asm  aes256_gcm_vaes_avx2.asm  aes_cbc_dec_by16_vaes_avx2.asm  aes_cbc_enc_vaes_avx2.asm  aes_cfb_dec_by16_vaes_avx2.asm  aes_cfb_enc_vaes_avx2.asm  aes_cmac_vaes_avx2.asm  aes_cntr_ccm_vaes_avx2.asm  aes_gcm_int_api_vaes_avx2.asm  aes_gcm_vaes_avx2.asm  (+14 more)
perf/: CMakeLists.txt  Makefile  README  README.md  imb-perf-cmp.py  imb-perf-tool.py  imb-slope-to-stat.pl  imb-speed.py  imb-stat-algo-report.pl  imb-stat-avg.pl  ipsec_diff_tool.py  ipsec_perf.c  ipsec_perf_tool.py  misc.asm  misc.h  misc_aarch64.S  msr.c  msr.h  perf_tests.cmake  win_x64.mak
test/: CMakeLists.txt  Makefile  README.md  acvp_app_main.c  aes_cbcs_test.c  aes_test.c  api_test.c  ccm_test.c  chacha20_poly1305_test.c  chacha_test.c  chained_test.c  clear_mem_test.c  cmac_test.c  crc_test.c  ctr_test.c  customop_test.c  customop_test.h  des_test.c  direct_api_fuzz_test.c  direct_api_param_test.c  direct_api_param_test.c_template  direct_api_test.c  do_test.h  ecb_test.c  gcm_ctr_vectors_test.h  gcm_test.c  gcm_vectors.h  hec_test.c  hmac_md5_test.c  hmac_sha1_test.c  hmac_sha256_sha512_test.c  ipsec_xvalid.c  job_api_fuzz_test.c  kasumi_test.c  kasumi_test_vectors.h  main.c  misc.asm  misc.h  misc_aarch64.S  null_test.c  (+14 more)
(+1938 files in other folders)
